--- a/index.htm
+++ b/index.htm
@@ -77,8 +77,8 @@
                                 <!--組-->
                                 <!--組-->
                             	<div class="piece clearfix">
-                                	<p class="pic"><img src="images/about_2.jpg" alt="黃金湯泉的秘密"></p>
-                                    <h3><i class="icon_sub_title"></i>黃金湯泉的秘密</h3>
+                                	<p class="pic"><img src="images/about_2.jpg" alt="日本有馬溫泉"></p>
+                                    <h3><i class="icon_sub_title"></i>日本有馬溫泉</h3>
                                     <p class="summary">
                                     在日本，有關西第一名湯美稱、且號稱為「天皇御湯」的有馬溫泉，其具有「雙泉」的泉質特色與瑞穗地區極為相似，在日治時期常被相提並論。<br />
 
