changr customer's name

--- a/index.htm
+++ b/index.htm
@@ -191,48 +191,48 @@
                                 <!--組-->
                                 <div class="piece">
                                     <a href="http://www.js-hotspring.com.tw/" target="_blank">
-                                        <h3><i class="icon_site"></i>瑞穗溫泉</h3>
-                                        <img src="images/hotel_6.jpg" alt="瑞穗溫泉">
+                                        <h3><i class="icon_site"></i>山下的厝</h3>
+                                        <img src="images/hotel_6.jpg" alt="山下的厝">
                                     </a>
                                 </div>
                                 <!--組-->
                                 <!--組-->
                                 <div class="piece" target="_blank">
                                     <a href="http://www.thesilencemanor.com.tw/">
-                                        <h3><i class="icon_site"></i>松邑莊園</h3>
-                                        <img src="images/hotel_7.jpg" alt="松邑莊園">
+                                        <h3><i class="icon_site"></i>瑞穗溫泉</h3>
+                                        <img src="images/hotel_7.jpg" alt="瑞穗溫泉">
                                     </a>
                                 </div>
                                 <!--組-->
                                 <!--組-->
                                 <div class="piece">
                                     <a href="http://www.bcdspa.idv.tw/" target="_blank">
-                                        <h3><i class="icon_site"></i>吉祥庭園溫泉</h3>
-                                        <img src="images/hotel_8.jpg" alt="吉祥庭園溫泉">
+                                        <h3><i class="icon_site"></i>松邑莊園</h3>
+                                        <img src="images/hotel_8.jpg" alt="松邑莊園">
                                     </a>
                                 </div>
                                 <!--組-->
                                 <!--組-->
                                 <div class="piece">
                                     <a href="http://ruixiong.hlbnb.net/" target="_blank">
-                                        <h3><i class="icon_site"></i>瑞雄溫泉</h3>
-                                        <img src="images/hotel_9.jpg" alt="瑞雄溫泉">
+                                        <h3><i class="icon_site"></i>吉祥庭園溫泉</h3>
+                                        <img src="images/hotel_9.jpg" alt="吉祥庭園溫泉">
                                     </a>
                                 </div>
                                 <!--組-->
                                 <!--組-->
                                 <div class="piece">
                                     <a href="http://www.yuan-hhs.com.tw/" target="_blank">
-                                        <h3><i class="icon_site"></i>原鄉溫泉</h3>
-                                        <img src="images/hotel_10.jpg" alt="原鄉溫泉">
+                                        <h3><i class="icon_site"></i>瑞雄溫泉</h3>
+                                        <img src="images/hotel_10.jpg" alt="瑞雄溫泉">
                                     </a>
                                 </div>
                                 <!--組-->
                                 <!--組-->
                                 <div class="piece">
                                     <a href="http://cocoforest.970bnb.net/" target="_blank">
-                                        <h3><i class="icon_site"></i>椰子琳溫泉</h3>
-                                        <img src="images/hotel_11.jpg" alt="紅葉溫泉">
+                                        <h3><i class="icon_site"></i>原鄉溫泉</h3>
+                                        <img src="images/hotel_11.jpg" alt="原鄉溫泉">
                                     </a>
                                 </div>
                                 <!--組-->
