--- a/index.htm
+++ b/index.htm
@@ -118,9 +118,9 @@
                             <!--組-->
                         	<div class="piece">
                             	<p class="pic"><img src="images/about_4.jpg" alt=""></p>
-                                <h3>難得一見的溫泉花</h3>
+                                <h3>美麗的溫泉結晶</h3>
                                 <p class="summary">
-                                瑞穗黃金湯泉另有一項十分難得的天然資源-溫泉花。其產生原因乃是泉水中蘊含大量礦物質，漂浮在水面上，形成一綿密如花粉狀的表層。溫泉花的產生不僅說明了泉水中蘊含了豐富的礦物質，更可用於按摩肌膚，除去角質的功效，是瑞穗黃金湯泉的特色之一。
+                                瑞穗黃金湯泉因礦物質含量豐富，除了在溫泉水面上形成漂浮的溫泉花外，更經常形成金黃色的美麗結晶，部分可用來加工製成饒富意義的特色商品。
                                 </p>
                             </div>
                             <!--組-->
@@ -190,15 +190,15 @@
                                 <!--組-->
                                 <!--組-->
                                 <div class="piece">
-                                    <a href="http://www.js-hotspring.com.tw/" target="_blank">
+                                    <a href="http://www.sunshinehotspring.com/" target="_blank">
                                         <h3><i class="icon_site"></i>山下的厝</h3>
                                         <img src="images/hotel_6.jpg" alt="山下的厝">
                                     </a>
                                 </div>
                                 <!--組-->
                                 <!--組-->
-                                <div class="piece" target="_blank">
-                                    <a href="http://www.thesilencemanor.com.tw/">
+                                <div class="piece" >
+                                    <a href="http://www.js-hotspring.com.tw/" target="_blank">
                                         <h3><i class="icon_site"></i>瑞穗溫泉</h3>
                                         <img src="images/hotel_7.jpg" alt="瑞穗溫泉">
                                     </a>
@@ -206,7 +206,7 @@
                                 <!--組-->
                                 <!--組-->
                                 <div class="piece">
-                                    <a href="http://www.bcdspa.idv.tw/" target="_blank">
+                                    <a href="http://www.thesilencemanor.com.tw/" target="_blank">
                                         <h3><i class="icon_site"></i>松邑莊園</h3>
                                         <img src="images/hotel_8.jpg" alt="松邑莊園">
                                     </a>
@@ -214,7 +214,7 @@
                                 <!--組-->
                                 <!--組-->
                                 <div class="piece">
-                                    <a href="http://ruixiong.hlbnb.net/" target="_blank">
+                                    <a href="http://www.bcdspa.idv.tw/" target="_blank">
                                         <h3><i class="icon_site"></i>吉祥庭園溫泉</h3>
                                         <img src="images/hotel_9.jpg" alt="吉祥庭園溫泉">
                                     </a>
@@ -222,7 +222,7 @@
                                 <!--組-->
                                 <!--組-->
                                 <div class="piece">
-                                    <a href="http://www.yuan-hhs.com.tw/" target="_blank">
+                                    <a href="http://ruixiong.hlbnb.net/" target="_blank">
                                         <h3><i class="icon_site"></i>瑞雄溫泉</h3>
                                         <img src="images/hotel_10.jpg" alt="瑞雄溫泉">
                                     </a>
@@ -230,7 +230,7 @@
                                 <!--組-->
                                 <!--組-->
                                 <div class="piece">
-                                    <a href="http://cocoforest.970bnb.net/" target="_blank">
+                                    <a href="http://www.yuan-hhs.com.tw/" target="_blank">
                                         <h3><i class="icon_site"></i>原鄉溫泉</h3>
                                         <img src="images/hotel_11.jpg" alt="原鄉溫泉">
                                     </a>
