--- a/index.htm
+++ b/index.htm
@@ -176,7 +176,7 @@
                                 <!--組-->
                                 <div class="piece">
                                     <a href="http://cocoforest.970bnb.net/" target="_blank">
-                                        <h3><i class="icon_site"></i>椰子琳溫泉</h3>
+                                        <h3><i class="icon_site"></i>椰子林溫泉</h3>
                                         <img src="images/hotel_4.jpg" alt="椰子琳溫泉">
                                     </a>
                                 </div>
