--- a/index.htm
+++ b/index.htm
@@ -3,6 +3,10 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width; initial-scale=1; minimum-scale=1, maximum-scale=1" />
+<!-- touch icon 開始 -->
+<link rel="apple-touch-icon" sizes="180x180" href="images/touchicon.png" /> <!--ios-->
+<link rel="shortcut icon" sizes="192x192" href="images/touchicon.png" /> <!--android & PC -->
+<!-- touch icon 結束 -->
 <title>金銀雙湯</title>
 <link rel="stylesheet" type="text/css" href="css/master.css"/>
 
